# School

./: LICENSE
Algorithms(CENG315)/the3/: the3  the3.cpp
Applied Parallel Programming on GPU(GATE713)/: README
Applied Parallel Programming on GPU(GATE713)/hw0/: hw1_benchmark.txt
Applied Parallel Programming on GPU(GATE713)/hw1/: cuda_hw2.cu  deviceQueryResult.txt  hw2Report.docx
Applied Parallel Programming on GPU(GATE713)/hw2/: benchmark.txt  cpuFunctions.h  kernels.cu
Applied Parallel Programming on GPU(GATE713)/hw3/: README.txt  Thrust_GPU_lena_after.pgm  benchmark.txt  cpuFunctions.cpp  cpuFunctions.h  hw3Report.docx  kernels.cu  kernels.cuh  main.cpp
C(CENG140)/: TEH.c  dara.c
CPP(CENG213)/HW1/: Entry.cpp  Entry.hpp  HistoryRecord.cpp  (+6 more)
Computer Enginnering Design(CENG 491)/: readme.txt
Discrete(CENG223)/: the1.tex
Fundamentals of Operational Research(IE 407)/: OR conflicting prof fix.xlsx
Game Metrics(MMI 508)/: MMI508 HW1.docx  MMI508 Project - Ahmet Dara VEFA.docx
Introduction to Embedded Systems Development(CENG 336)/: the_2.asm
Principles of Sociology(SOC 100)/: SOC100HW1.docx  SOC100HW2.docx  SOC100HW3.docx
Programming Language Concepts(CENG242)/HW3/HW3-StudentPack/: Blockchain.cpp  Blockchain.h  CMakeLists.txt  CengMiner  Koin.cpp  Koin.h  Miner.cpp  Miner.h  TestableBlockchain.cpp  TestableKoin.cpp  TestableMiner.cpp  main.cpp
hw0/: cuda_hw1_1.cu  cuda_hw1_2.cu  cuda_hw1_3.cu  hw1Report.docx  hw1_benchmark.txt
hw1/: deviceQueryResult.txt  ~$2Report.docx
hw2/: benchmark.txt  cpuFunctions.cpp  hw2Report.docx  kernels.cuh  main.cpp
(+273 files in other folders)
